--- a/parte_3.html
+++ b/parte_3.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css" />
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
-
+        
     <style>
         .margin{
             margin:2vh 0vh;
@@ -14,11 +14,12 @@
     </style>
 
     <body>
-        <div class="container">
-            <button class="btn btn-social btn-facebook margin">
-                <span class="fa fa-facebook"></span>Log-in com Facebook
-            </button>
-            <!-- https://www.codexworld.com/login-with-facebook-using-javascript-sdk/ -->
-        </div>
+        <div id="fb-root"></div>
+        <h2 id="status"></h2>
+        <button class="btn btn-social btn-facebook" data-max-rows="2" data-size="large"  data-button-type="continue_with" data-show-faces="true" onclick="facebookLogin()" id="fbLink" data-auto-logout-link="true" data-use-continue-as="true">
+                <span class="fa fa-facebook"></span><span id="btn-text">Logar com facebook</span>
+        </button>
+        <div id="userData"></div>
     </body>
+        <script src="./assets/parte_3.js"></script>
 </html>
